--- a/etc_dhcp_dhcpd.conf
+++ b/etc_dhcp_dhcpd.conf
@@ -11,5 +11,5 @@ option subnet-mask 255.255.255.0;
 option broadcast-address 192.168.69.255;
 default-lease-time 600;
 max-lease-time 7200;
-option bootfile-name "http://192.168.69.1/ztp_python_script.py";
+option bootfile-name "http://192.168.69.1/ztp.py";
 }
