--- a/etc_dhcp_dhcpd.conf
+++ b/etc_dhcp_dhcpd.conf
@@ -11,6 +11,8 @@ option subnet-mask 255.255.255.0;
 option broadcast-address 192.168.69.255;
 default-lease-time 600;
 max-lease-time 7200;
-#option bootfile-name "http://192.168.69.1/ztp.py";
-option bootfile-name "http://yangsuite/ztp/netconf.py";
+
+# Example for DHCP Option 67 with HTTP:
+option bootfile-name "http://192.168.69.1/ztp.py";
+
 }
